# snakeGame

./: CMakeLists.txt  Specifikáció.docx  gameLogic.c  gameLogic.h  graphics.c  graphics.h  highscores.txt  io.c  io.h  level.c  main.c  menus.c  menus.h  settings.txt  snakeGame.cbp  snakeGame.depend  snakeGame.layout
Headers/: gameLogic.h  graphics.h  io.h  menus.h
Modules/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
resources/: highscores.txt
